framec_tests/language_specific/java/v3_outline/negative/header_outside_section.frm
@target java

system S {
    bad() {
        // body
    }
}

